--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.1.RELEASE")
-				classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE")
+
     }
 }
 
@@ -12,21 +12,15 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
-apply plugin: "io.spring.dependency-management"
 
 repositories{
 	mavenCentral()
 }
 
-dependencyManagement {
-     imports {
-          mavenBom 'org.springframework.cloud:spring-cloud-netflix:1.0.4.RELEASE'
-     }
-}
 
 dependencies{
-	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-	compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+	compile 'org.springframework.boot:spring-boot-starter-web'
+  compile 'org.codehaus.groovy:groovy:2.3.7'
 }
 
 jar{
