--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories{
 dependencies{
 	compile 'org.springframework.boot:spring-boot-starter-web'
   compile 'org.codehaus.groovy:groovy:2.3.7'
+  compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 }
 
 jar{
