--- a/build.gradle
+++ b/build.gradle
@@ -12,22 +12,50 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'war'
+def cucumberVersion = "1.2.4"
 
-repositories{
-	mavenCentral()
+configurations {
+    cucumberRuntime {
+        extendsFrom testRuntime
+    }
 }
 
+repositories {
+    mavenCentral()
+}
 
-dependencies{
-	compile 'org.springframework.boot:spring-boot-starter-web'
-  compile 'org.codehaus.groovy:groovy:2.3.7'
-  compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+task cucumber() {
+    dependsOn assemble
+    doLast {
+        javaexec {
+            main = "cucumber.api.cli.Main"
+            systemProperties System.getProperties()
+            classpath = configurations.cucumberRuntime + sourceSets.test.runtimeClasspath
+            //args = ['--plugin', 'pretty','--glue', 'src/test/groovy', 'src/test/resources']
+            args = ['-f', 'html:build/reports/cucumber/', '-f', 'json:build/reports/cucumber/report.json', '--glue', 'src/test/groovy', 'src/test/resources']
+            ignoreExitValue = true
+        }
+    }
+}
+
+//Ensure the cucumber tests are executed as part of the build. Makes for a very pretty output.
+build.dependsOn cucumber
+
+dependencies {
+    cucumberRuntime files("${jar.archivePath}")
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.codehaus.groovy:groovy-all:2.3.7'
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile "info.cukes:cucumber-junit:$cucumberVersion"
+    testCompile "info.cukes:cucumber-groovy:$cucumberVersion"
+    compile 'org.trimou:trimou-core:1.8.0.Final'
 }
 
-jar{
-	baseName='jcp-poc-app'
-	version='0.1.0'
+jar {
+    baseName = 'jcp-poc-app'
+    version = '0.1.0'
 }
 
 task wrapper(type: Wrapper) {
