--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE")
-
     }
 }
 
@@ -22,6 +21,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 task cucumber() {
@@ -43,14 +43,21 @@ build.dependsOn cucumber
 
 dependencies {
     cucumberRuntime files("${jar.archivePath}")
-    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.3.2.RELEASE'
     compile 'org.codehaus.groovy:groovy-all:2.3.7'
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    compile("io.springfox:springfox-swagger2:2.3.1")
+    compile("io.springfox:springfox-swagger-ui:2.3.1")
+    compile 'io.swagger:swagger-annotations:1.5.7'
+
+    compile 'joda-time:joda-time:2.9.2'
+    compile 'org.trimou:trimou-core:1.8.0.Final'
+
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
     testCompile "info.cukes:cucumber-groovy:$cucumberVersion"
-    compile 'org.trimou:trimou-core:1.8.0.Final'
 }
 
 jar {
