--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.3.RELEASE")
     }
 }
+plugins {
+  id "org.sonarqube" version "2.4"
+}
 
 apply plugin: 'groovy'
 apply plugin: 'idea'
@@ -43,6 +46,7 @@ task cucumber() {
 
 dependencies {
     cucumberRuntime files("${jar.archivePath}")
+    compile 'com.google.code.findbugs:jsr305:3.0.2'
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE'
     compile 'org.codehaus.groovy:groovy-all:2.3.7'
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
