--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-
+systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.jdbc.username=sonar
+systemProp.sonar.jdbc.password=password
+systemProp.sonar.projectKey=demoApp
+systemProp.sonar.projectVersion=0.1
