sonar sources added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.jdbc.username=sonar
 sonar.jdbc.password=password
 sonar.projectKey=demoApp
 sonar.projectVersion=0.1
+sonar.sources=src
+sonar.language=Groovy
