--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ systemProp.sonar.host.url=http://localhost:9000
 systemProp.sonar.jdbc.username=sonar
 systemProp.sonar.jdbc.password=password
 systemProp.sonar.projectKey=demoApp
+systemProp.sonar.projectName=Demo App
 systemProp.sonar.projectVersion=0.1
